// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`production ApplicationShellView retains shell, window strip, pane chrome, and canvas at %sx%s 1`] = `
"  ⌂  ●❯                                                                    live
  tmux               0:main [WORKING]                                         +
 ● main             ● Codex                    [WORKING]  ⋯
 ○ website          CANONICAL-CELL

 Agents
 • Codex [WORKING]



…

                     Terminals  ready                               Commands F5"
`;

exports[`production ApplicationShellView retains shell, window strip, pane chrome, and canvas at %sx%s 2`] = `
"   tmux-ide   ⌂ Home  ●❯ Terminals                                                                                 live
  tmux-ide                   0:main [WORKING]                                                              + New window
 ● main                     ● Codex                    [WORKING]  ⋯
 ○ website                  CANONICAL-CELL

 Agents
 • Codex [WORKING]



…

                             Terminals / terminal  ready                                                    Commands F5"
`;

exports[`production ApplicationShellView retains shell, window strip, pane chrome, and canvas at %sx%s 3`] = `
"   tmux-ide  F1  ⌂ Home  F2 ●❯ Terminals                                                                                                                                                           live
  tmux-ide                   0:main [WORKING]                                                                                                                                              + New window
 ● main                     ● Codex                    [WORKING]  ⋯
 ○ website                  CANONICAL-CELL

 Agents
 • Codex [WORKING]



…

                             tmux-ide / Terminals / terminal  ready                                                                                                                         Commands F5"
`;

exports[`production ApplicationShellView reacts palette geometry through narrow live resizes 1`] = `
"  ⌂  ●❯                live
  ╭──────────────────────╮
  │ Command palette      │
  │ › F1 Home            │
  │ F2 Terminals         │
  │ New terminal window  │
  │ Split pane right     │
  ╰──────────────────────╯
 Termina… ready  Commands F…"
`;

exports[`production ApplicationShellView reacts palette geometry through narrow live resizes 2`] = `
"  ⌂  ●❯        live
  ╭──────────────╮
  │ Commands     │
  │ › F1 Home    │
  │ F2 Terminals │
 ●╰──────────────╯F2
    ○ Commands F5"
`;

exports[`production ApplicationShellView preserves canonical attention while prioritizing mixed window activity 1`] = `
"   tmux-ide   ⌂ Home  ●❯ Terminals                                                                                 live
  tmux-ide                   0:main [WORKING]                                                              + New window
 ● main                     ● Codex                    [WORKING]  ⋯ ○ Scout                       [IDLE]  ⋯
 ○ website                  CANONICAL-CELL                          CANONICAL-CELL

 Agents
 • Codex [WORKING]
 ! Scout ! [IDLE]


…

                             Terminals / terminal  ready                                                    Commands F5"
`;
